# guillemot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_refinement_NaCoO2.inp  examples.py  main.py  notes.md  pyproject.toml  run.sh  test_api.py  test_integration.py  test_multimodal.py  test_simple.py  tools.py
.github/workflows/: ci.yml
examples/FeSb_19RBM/: FeSb_19RBM.inp  FeSb_19RBM.xy
examples/FeSb_19RBM/Runs/1/: FeSb_19RBM.out  hkl.txt  output.txt
examples/HL2-1/: HL2-1_2.xy
examples/KD1-2_5_NaCoO2/: KD1-2_5-90_30min.xy
examples/MnSb_33_BM/: MnSb_33_BM.xye  MnSb_33_BM_synchrotron.inp
examples/MnSb_34_impure/: MnSb_34.xy
examples/NaCoO2/: example_refinement_NaCoO2.inp
src/guillemot/: __init__.py  main.py  utils.py
src/guillemot/tools/: __init__.py  datalab.py  optimade.py  plotting.py  topas.py
tests/: test_optimade.py
