[project]
name = "guillemot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logfire>=4.6.0",
    "pydantic-ai>=1.0.3",
    "python-dotenv>=1.1.1",
    "optimade[http-client,client]",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Add a "guillemot" entrypoint that launches the app in main
[project.scripts]
guillemot = "guillemot.main:launch"

[tool.setuptools.packages.find]
where = ["src"]
